# BXP-SecretSonar

./: .gitignore  README.md  bypass_tokens.json  install_deps.py  pyproject.toml  stealth_config.yaml  train_model.py
docs/source/: api.rst  architecture.rst  cli.rst  conf.py  faq.rst  index.rst  installation.rst  ml.rst  modules.rst
src/bxp_secretsonar/: cli.py  daemon.py
src/bxp_secretsonar/analyzers/: entropy.py  regex_engine.py
src/bxp_secretsonar/collectors/: deep_collector.py  http.py
src/bxp_secretsonar/console/: __init__.py  interactive.py
src/bxp_secretsonar/core/: decision.py  engine.py  engine.py.bak  environment.py  models.py  models_v2.py  queue.py
src/bxp_secretsonar/detectors/: active.py  passive.py  scorer.py
src/bxp_secretsonar/discovery/: alienvault.py  base.py  binaryedge.py  censys.py  certspotter.py  crtsh.py  exa.py  firecrawl.py  github_search.py  hackertarget.py  manager.py  s3buckets.py  s3scanner.py  securitytrails.py  shodan.py  urlscan.py  wayback.py
src/bxp_secretsonar/exploit/: framework.py
src/bxp_secretsonar/injectors/: base.py  param_injector.py
src/bxp_secretsonar/plugins/: fallback.py  loader.py  plugin_loader.py
src/bxp_secretsonar/utils/: android_fallback.py  cache.py  crypto.py  opsectools.py  proxy_bandit.py  resilience.py  security.py  stealth.py  termux.py  (+1 more)
tests/unit/: test_bypass_2fa.py  test_daemon.py  test_detectors.py  test_entropy.py  test_impact.py  test_injectors.py  test_persist.py  test_pivot.py  test_queue.py  test_regex_engine.py  test_security.py  test_specialized_validators.py  test_validators.py
(+38 files in other folders)
