[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bxp-secretsonar"
version = "0.1.0a1"
description = "Universal proactive secret detection engine"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "pydantic>=2.7",
    "rich>=13.7",
    "typer>=0.12",
    "tenacity>=8.3",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "pytest>=8.2", "pytest-asyncio>=0.23", "faker>=26.0"]

[project.scripts]
secretsonar = "bxp_secretsonar.cli:app"

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
